versions/0.8.1/_sources/refs/_aws-cdk_aws-elasticbeanstalk.rst.txt
.. @jsii-pacmak:meta@ {"fingerprint":"tGJ1dekdv8UM+Y2B0aZRNmE3UGAXFdwhUwHFD/AyusQ="}

@aws-cdk/aws-elasticbeanstalk
=============================

.. tabs::

   .. group-tab:: Java

      View in `Maven Central <https://repo1.maven.org/maven2/software/amazon/awscdk/elasticbeanstalk/0.8.1/>`_

      **Apache Buildr**:

      .. code-block:: none

         'software.amazon.awscdk:elasticbeanstalk:jar:0.8.1'

      **Apache Ivy**:

      .. code-block:: xml

         <dependency groupId="software.amazon.awscdk" name="elasticbeanstalk" rev="0.8.1"/>

      **Apache Maven**:

      .. code-block:: xml

         <dependency>
           <groupId>software.amazon.awscdk</groupId>
           <artifactId>elasticbeanstalk</artifactId>
           <version>0.8.1</version>
         </dependency>

      **Gradle / Grails**:

      .. code-block:: none

         compile 'software.amazon.awscdk:elasticbeanstalk:0.8.1'

      **Groovy Grape**:

      .. code-block:: none

         @Grapes(
         @Grab(group='software.amazon.awscdk', module='elasticbeanstalk', version='0.8.1')
         )


   .. group-tab:: JavaScript

      View in `NPM <https://www.npmjs.com/package/@aws-cdk/aws-elasticbeanstalk/v/0.8.1>`_

      **npm**:

      .. code-block:: console

         $ npm i @aws-cdk/aws-elasticbeanstalk@0.8.1

      **package.json**:

      .. code-block:: js

         {
           "@aws-cdk/aws-elasticbeanstalk": "^0.8.1"
         }

      **yarn**:

      .. code-block:: console

         $ yarn add @aws-cdk/aws-elasticbeanstalk@0.8.1


   .. group-tab:: TypeScript

      View in `NPM <https://www.npmjs.com/package/@aws-cdk/aws-elasticbeanstalk/v/0.8.1>`_

      **npm**:

      .. code-block:: console

         $ npm i @aws-cdk/aws-elasticbeanstalk@0.8.1

      **package.json**:

      .. code-block:: js

         {
           "@aws-cdk/aws-elasticbeanstalk": "^0.8.1"
         }

      **yarn**:

      .. code-block:: console

         $ yarn add @aws-cdk/aws-elasticbeanstalk@0.8.1



.. mdinclude:: ./__aws-cdk_aws-elasticbeanstalk.README.md

Reference
---------

.. py:module:: @aws-cdk/aws-elasticbeanstalk

EnvironmentEndpointUrl
^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: EnvironmentEndpointUrl([valueOrFunction])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.elasticbeanstalk.EnvironmentEndpointUrl;

      .. code-tab:: javascript

         const { EnvironmentEndpointUrl } = require('@aws-cdk/aws-elasticbeanstalk');

      .. code-tab:: typescript

         import { EnvironmentEndpointUrl } from '@aws-cdk/aws-elasticbeanstalk';



   :extends: :py:class:`@aws-cdk/cdk.Token`
   :param valueOrFunction: 
   :type valueOrFunction: any or undefined


cloudformation
^^^^^^^^^^^^^^
.. py:module:: @aws-cdk/aws-elasticbeanstalk.cloudformation

ApplicationResource
~~~~~~~~~~~~~~~~~~~

.. py:class:: ApplicationResource(parent, name, [properties])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.elasticbeanstalk.cloudformation.ApplicationResource;

      .. code-tab:: javascript

         const { cloudformation.ApplicationResource } = require('@aws-cdk/aws-elasticbeanstalk');

      .. code-tab:: typescript

         import { cloudformation.ApplicationResource } from '@aws-cdk/aws-elasticbeanstalk';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``ApplicationResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``ApplicationResource``
   :type properties: :py:class:`~@aws-cdk/aws-elasticbeanstalk.cloudformation.ApplicationResourceProps` or undefined

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*

   .. py:class:: ApplicationResourceLifecycleConfigProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.elasticbeanstalk.cloudformation.ApplicationResource.ApplicationResourceLifecycleConfigProperty;

         .. code-tab:: javascript

            // cloudformation.ApplicationResource.ApplicationResourceLifecycleConfigProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.ApplicationResource.ApplicationResourceLifecycleConfigProperty } from '@aws-cdk/aws-elasticbeanstalk';





      .. py:attribute:: serviceRole

         ``ApplicationResource.ApplicationResourceLifecycleConfigProperty.ServiceRole``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-elasticbeanstalk-application-applicationresourcelifecycleconfig.html#cfn-elasticbeanstalk-application-applicationresourcelifecycleconfig-servicerole


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: versionLifecycleConfig

         ``ApplicationResource.ApplicationResourceLifecycleConfigProperty.VersionLifecycleConfig``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-elasticbeanstalk-application-applicationresourcelifecycleconfig.html#cfn-elasticbeanstalk-application-applicationresourcelifecycleconfig-versionlifecycleconfig


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-elasticbeanstalk.cloudformation.ApplicationResource.ApplicationVersionLifecycleConfigProperty` or undefined


   .. py:class:: ApplicationVersionLifecycleConfigProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.elasticbeanstalk.cloudformation.ApplicationResource.ApplicationVersionLifecycleConfigProperty;

         .. code-tab:: javascript

            // cloudformation.ApplicationResource.ApplicationVersionLifecycleConfigProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.ApplicationResource.ApplicationVersionLifecycleConfigProperty } from '@aws-cdk/aws-elasticbeanstalk';





      .. py:attribute:: maxAgeRule

         ``ApplicationResource.ApplicationVersionLifecycleConfigProperty.MaxAgeRule``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-elasticbeanstalk-application-applicationversionlifecycleconfig.html#cfn-elasticbeanstalk-application-applicationversionlifecycleconfig-maxagerule


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-elasticbeanstalk.cloudformation.ApplicationResource.MaxAgeRuleProperty` or undefined


      .. py:attribute:: maxCountRule

         ``ApplicationResource.ApplicationVersionLifecycleConfigProperty.MaxCountRule``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-elasticbeanstalk-application-applicationversionlifecycleconfig.html#cfn-elasticbeanstalk-application-applicationversionlifecycleconfig-maxcountrule


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-elasticbeanstalk.cloudformation.ApplicationResource.MaxCountRuleProperty` or undefined


   .. py:class:: MaxAgeRuleProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.elasticbeanstalk.cloudformation.ApplicationResource.MaxAgeRuleProperty;

         .. code-tab:: javascript

            // cloudformation.ApplicationResource.MaxAgeRuleProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.ApplicationResource.MaxAgeRuleProperty } from '@aws-cdk/aws-elasticbeanstalk';





      .. py:attribute:: deleteSourceFromS3

         ``ApplicationResource.MaxAgeRuleProperty.DeleteSourceFromS3``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-elasticbeanstalk-application-maxagerule.html#cfn-elasticbeanstalk-application-maxagerule-deletesourcefroms3


         :type: boolean or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: enabled

         ``ApplicationResource.MaxAgeRuleProperty.Enabled``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-elasticbeanstalk-application-maxagerule.html#cfn-elasticbeanstalk-application-maxagerule-enabled


         :type: boolean or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: maxAgeInDays

         ``ApplicationResource.MaxAgeRuleProperty.MaxAgeInDays``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-elasticbeanstalk-application-maxagerule.html#cfn-elasticbeanstalk-application-maxagerule-maxageindays


         :type: number or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:class:: MaxCountRuleProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.elasticbeanstalk.cloudformation.ApplicationResource.MaxCountRuleProperty;

         .. code-tab:: javascript

            // cloudformation.ApplicationResource.MaxCountRuleProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.ApplicationResource.MaxCountRuleProperty } from '@aws-cdk/aws-elasticbeanstalk';





      .. py:attribute:: deleteSourceFromS3

         ``ApplicationResource.MaxCountRuleProperty.DeleteSourceFromS3``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-elasticbeanstalk-application-maxcountrule.html#cfn-elasticbeanstalk-application-maxcountrule-deletesourcefroms3


         :type: boolean or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: enabled

         ``ApplicationResource.MaxCountRuleProperty.Enabled``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-elasticbeanstalk-application-maxcountrule.html#cfn-elasticbeanstalk-application-maxcountrule-enabled


         :type: boolean or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: maxCount

         ``ApplicationResource.MaxCountRuleProperty.MaxCount``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-elasticbeanstalk-application-maxcountrule.html#cfn-elasticbeanstalk-application-maxcountrule-maxcount


         :type: number or :py:class:`@aws-cdk/cdk.Token` or undefined



ApplicationResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: ApplicationResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.elasticbeanstalk.cloudformation.ApplicationResourceProps;

      .. code-tab:: javascript

         // cloudformation.ApplicationResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.ApplicationResourceProps } from '@aws-cdk/aws-elasticbeanstalk';





   .. py:attribute:: applicationName

      ``AWS::ElasticBeanstalk::Application.ApplicationName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-beanstalk.html#cfn-elasticbeanstalk-application-name


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: description

      ``AWS::ElasticBeanstalk::Application.Description``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-beanstalk.html#cfn-elasticbeanstalk-application-description


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: resourceLifecycleConfig

      ``AWS::ElasticBeanstalk::Application.ResourceLifecycleConfig``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-beanstalk.html#cfn-elasticbeanstalk-application-resourcelifecycleconfig


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-elasticbeanstalk.cloudformation.ApplicationResource.ApplicationResourceLifecycleConfigProperty` or undefined


ApplicationVersionResource
~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: ApplicationVersionResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.elasticbeanstalk.cloudformation.ApplicationVersionResource;

      .. code-tab:: javascript

         const { cloudformation.ApplicationVersionResource } = require('@aws-cdk/aws-elasticbeanstalk');

      .. code-tab:: typescript

         import { cloudformation.ApplicationVersionResource } from '@aws-cdk/aws-elasticbeanstalk';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``ApplicationVersionResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``ApplicationVersionResource``
   :type properties: :py:class:`~@aws-cdk/aws-elasticbeanstalk.cloudformation.ApplicationVersionResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*

   .. py:class:: SourceBundleProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.elasticbeanstalk.cloudformation.ApplicationVersionResource.SourceBundleProperty;

         .. code-tab:: javascript

            // cloudformation.ApplicationVersionResource.SourceBundleProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.ApplicationVersionResource.SourceBundleProperty } from '@aws-cdk/aws-elasticbeanstalk';





      .. py:attribute:: s3Bucket

         ``ApplicationVersionResource.SourceBundleProperty.S3Bucket``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-beanstalk-sourcebundle.html#cfn-beanstalk-sourcebundle-s3bucket


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: s3Key

         ``ApplicationVersionResource.SourceBundleProperty.S3Key``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-beanstalk-sourcebundle.html#cfn-beanstalk-sourcebundle-s3key


         :type: string or :py:class:`@aws-cdk/cdk.Token`



ApplicationVersionResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: ApplicationVersionResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.elasticbeanstalk.cloudformation.ApplicationVersionResourceProps;

      .. code-tab:: javascript

         // cloudformation.ApplicationVersionResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.ApplicationVersionResourceProps } from '@aws-cdk/aws-elasticbeanstalk';





   .. py:attribute:: applicationName

      ``AWS::ElasticBeanstalk::ApplicationVersion.ApplicationName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-beanstalk-version.html#cfn-elasticbeanstalk-applicationversion-applicationname


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: sourceBundle

      ``AWS::ElasticBeanstalk::ApplicationVersion.SourceBundle``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-beanstalk-version.html#cfn-elasticbeanstalk-applicationversion-sourcebundle


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-elasticbeanstalk.cloudformation.ApplicationVersionResource.SourceBundleProperty`


   .. py:attribute:: description

      ``AWS::ElasticBeanstalk::ApplicationVersion.Description``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-beanstalk-version.html#cfn-elasticbeanstalk-applicationversion-description


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


ConfigurationTemplateResource
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: ConfigurationTemplateResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.elasticbeanstalk.cloudformation.ConfigurationTemplateResource;

      .. code-tab:: javascript

         const { cloudformation.ConfigurationTemplateResource } = require('@aws-cdk/aws-elasticbeanstalk');

      .. code-tab:: typescript

         import { cloudformation.ConfigurationTemplateResource } from '@aws-cdk/aws-elasticbeanstalk';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``ConfigurationTemplateResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``ConfigurationTemplateResource``
   :type properties: :py:class:`~@aws-cdk/aws-elasticbeanstalk.cloudformation.ConfigurationTemplateResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*

   .. py:class:: ConfigurationOptionSettingProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.elasticbeanstalk.cloudformation.ConfigurationTemplateResource.ConfigurationOptionSettingProperty;

         .. code-tab:: javascript

            // cloudformation.ConfigurationTemplateResource.ConfigurationOptionSettingProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.ConfigurationTemplateResource.ConfigurationOptionSettingProperty } from '@aws-cdk/aws-elasticbeanstalk';





      .. py:attribute:: namespace

         ``ConfigurationTemplateResource.ConfigurationOptionSettingProperty.Namespace``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-elasticbeanstalk-configurationtemplate-configurationoptionsetting.html#cfn-elasticbeanstalk-configurationtemplate-configurationoptionsetting-namespace


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: optionName

         ``ConfigurationTemplateResource.ConfigurationOptionSettingProperty.OptionName``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-elasticbeanstalk-configurationtemplate-configurationoptionsetting.html#cfn-elasticbeanstalk-configurationtemplate-configurationoptionsetting-optionname


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: resourceName

         ``ConfigurationTemplateResource.ConfigurationOptionSettingProperty.ResourceName``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-elasticbeanstalk-configurationtemplate-configurationoptionsetting.html#cfn-elasticbeanstalk-configurationtemplate-configurationoptionsetting-resourcename


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: value

         ``ConfigurationTemplateResource.ConfigurationOptionSettingProperty.Value``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-elasticbeanstalk-configurationtemplate-configurationoptionsetting.html#cfn-elasticbeanstalk-configurationtemplate-configurationoptionsetting-value


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:class:: SourceConfigurationProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.elasticbeanstalk.cloudformation.ConfigurationTemplateResource.SourceConfigurationProperty;

         .. code-tab:: javascript

            // cloudformation.ConfigurationTemplateResource.SourceConfigurationProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.ConfigurationTemplateResource.SourceConfigurationProperty } from '@aws-cdk/aws-elasticbeanstalk';





      .. py:attribute:: applicationName

         ``ConfigurationTemplateResource.SourceConfigurationProperty.ApplicationName``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-elasticbeanstalk-configurationtemplate-sourceconfiguration.html#cfn-elasticbeanstalk-configurationtemplate-sourceconfiguration-applicationname


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: templateName

         ``ConfigurationTemplateResource.SourceConfigurationProperty.TemplateName``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-elasticbeanstalk-configurationtemplate-sourceconfiguration.html#cfn-elasticbeanstalk-configurationtemplate-sourceconfiguration-templatename


         :type: string or :py:class:`@aws-cdk/cdk.Token`



ConfigurationTemplateResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: ConfigurationTemplateResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.elasticbeanstalk.cloudformation.ConfigurationTemplateResourceProps;

      .. code-tab:: javascript

         // cloudformation.ConfigurationTemplateResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.ConfigurationTemplateResourceProps } from '@aws-cdk/aws-elasticbeanstalk';





   .. py:attribute:: applicationName

      ``AWS::ElasticBeanstalk::ConfigurationTemplate.ApplicationName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-elasticbeanstalk-configurationtemplate.html#cfn-elasticbeanstalk-configurationtemplate-applicationname


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: description

      ``AWS::ElasticBeanstalk::ConfigurationTemplate.Description``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-elasticbeanstalk-configurationtemplate.html#cfn-elasticbeanstalk-configurationtemplate-description


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: environmentId

      ``AWS::ElasticBeanstalk::ConfigurationTemplate.EnvironmentId``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-elasticbeanstalk-configurationtemplate.html#cfn-elasticbeanstalk-configurationtemplate-environmentid


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: optionSettings

      ``AWS::ElasticBeanstalk::ConfigurationTemplate.OptionSettings``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-elasticbeanstalk-configurationtemplate.html#cfn-elasticbeanstalk-configurationtemplate-optionsettings


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-elasticbeanstalk.cloudformation.ConfigurationTemplateResource.ConfigurationOptionSettingProperty` or undefined


   .. py:attribute:: platformArn

      ``AWS::ElasticBeanstalk::ConfigurationTemplate.PlatformArn``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-elasticbeanstalk-configurationtemplate.html#cfn-elasticbeanstalk-configurationtemplate-platformarn


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: solutionStackName

      ``AWS::ElasticBeanstalk::ConfigurationTemplate.SolutionStackName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-elasticbeanstalk-configurationtemplate.html#cfn-elasticbeanstalk-configurationtemplate-solutionstackname


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: sourceConfiguration

      ``AWS::ElasticBeanstalk::ConfigurationTemplate.SourceConfiguration``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-elasticbeanstalk-configurationtemplate.html#cfn-elasticbeanstalk-configurationtemplate-sourceconfiguration


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-elasticbeanstalk.cloudformation.ConfigurationTemplateResource.SourceConfigurationProperty` or undefined


EnvironmentResource
~~~~~~~~~~~~~~~~~~~

.. py:class:: EnvironmentResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.elasticbeanstalk.cloudformation.EnvironmentResource;

      .. code-tab:: javascript

         const { cloudformation.EnvironmentResource } = require('@aws-cdk/aws-elasticbeanstalk');

      .. code-tab:: typescript

         import { cloudformation.EnvironmentResource } from '@aws-cdk/aws-elasticbeanstalk';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``EnvironmentResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``EnvironmentResource``
   :type properties: :py:class:`~@aws-cdk/aws-elasticbeanstalk.cloudformation.EnvironmentResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


   .. py:attribute:: environmentEndpointUrl

      :type: :py:class:`~@aws-cdk/aws-elasticbeanstalk.EnvironmentEndpointUrl` *(readonly)*

   .. py:class:: OptionSettingProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.elasticbeanstalk.cloudformation.EnvironmentResource.OptionSettingProperty;

         .. code-tab:: javascript

            // cloudformation.EnvironmentResource.OptionSettingProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.EnvironmentResource.OptionSettingProperty } from '@aws-cdk/aws-elasticbeanstalk';





      .. py:attribute:: namespace

         ``EnvironmentResource.OptionSettingProperty.Namespace``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-beanstalk-option-settings.html#cfn-beanstalk-optionsettings-namespace


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: optionName

         ``EnvironmentResource.OptionSettingProperty.OptionName``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-beanstalk-option-settings.html#cfn-beanstalk-optionsettings-optionname


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: resourceName

         ``EnvironmentResource.OptionSettingProperty.ResourceName``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-beanstalk-option-settings.html#cfn-elasticbeanstalk-environment-optionsetting-resourcename


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: value

         ``EnvironmentResource.OptionSettingProperty.Value``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-beanstalk-option-settings.html#cfn-beanstalk-optionsettings-value


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:class:: TierProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.elasticbeanstalk.cloudformation.EnvironmentResource.TierProperty;

         .. code-tab:: javascript

            // cloudformation.EnvironmentResource.TierProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.EnvironmentResource.TierProperty } from '@aws-cdk/aws-elasticbeanstalk';





      .. py:attribute:: name

         ``EnvironmentResource.TierProperty.Name``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-beanstalk-environment-tier.html#cfn-beanstalk-env-tier-name


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: type

         ``EnvironmentResource.TierProperty.Type``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-beanstalk-environment-tier.html#cfn-beanstalk-env-tier-type


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: version

         ``EnvironmentResource.TierProperty.Version``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-beanstalk-environment-tier.html#cfn-beanstalk-env-tier-version


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined



EnvironmentResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: EnvironmentResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.elasticbeanstalk.cloudformation.EnvironmentResourceProps;

      .. code-tab:: javascript

         // cloudformation.EnvironmentResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.EnvironmentResourceProps } from '@aws-cdk/aws-elasticbeanstalk';





   .. py:attribute:: applicationName

      ``AWS::ElasticBeanstalk::Environment.ApplicationName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-beanstalk-environment.html#cfn-beanstalk-environment-applicationname


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: cnamePrefix

      ``AWS::ElasticBeanstalk::Environment.CNAMEPrefix``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-beanstalk-environment.html#cfn-beanstalk-environment-cnameprefix


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: description

      ``AWS::ElasticBeanstalk::Environment.Description``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-beanstalk-environment.html#cfn-beanstalk-environment-description


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: environmentName

      ``AWS::ElasticBeanstalk::Environment.EnvironmentName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-beanstalk-environment.html#cfn-beanstalk-environment-name


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: optionSettings

      ``AWS::ElasticBeanstalk::Environment.OptionSettings``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-beanstalk-environment.html#cfn-beanstalk-environment-optionsettings


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-elasticbeanstalk.cloudformation.EnvironmentResource.OptionSettingProperty` or undefined


   .. py:attribute:: platformArn

      ``AWS::ElasticBeanstalk::Environment.PlatformArn``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-beanstalk-environment.html#cfn-beanstalk-environment-platformarn


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: solutionStackName

      ``AWS::ElasticBeanstalk::Environment.SolutionStackName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-beanstalk-environment.html#cfn-beanstalk-environment-solutionstackname


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: tags

      ``AWS::ElasticBeanstalk::Environment.Tags``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-beanstalk-environment.html#cfn-elasticbeanstalk-environment-tags


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Tag` or undefined


   .. py:attribute:: templateName

      ``AWS::ElasticBeanstalk::Environment.TemplateName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-beanstalk-environment.html#cfn-beanstalk-environment-templatename


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: tier

      ``AWS::ElasticBeanstalk::Environment.Tier``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-beanstalk-environment.html#cfn-beanstalk-environment-tier


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-elasticbeanstalk.cloudformation.EnvironmentResource.TierProperty` or undefined


   .. py:attribute:: versionLabel

      ``AWS::ElasticBeanstalk::Environment.VersionLabel``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-beanstalk-environment.html#cfn-beanstalk-environment-versionlabel


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined



.. py:currentmodule:: @aws-cdk/aws-elasticbeanstalk

